5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4134/executions/1885_3216.log
== TEST (2019-07-09 10:14:38) 
-- CODE:
from numpy import*
from numpy.linalg import*

ce = array(eval(input("Codigo das filiais: ")))
td1 = array(eval(input("Total de despesa1: ")))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-09 10:18:06) 
-- CODE:
from numpy import*
from numpy.linalg import*

ce = array(eval(input("Codigo das filiais: ")))
print(ce)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-09 10:18:48) 
-- CODE:
from numpy import*
from numpy.linalg import*

ce = array(eval(input("Codigo das filiais: ")))
x = sum(ce)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-09 10:18:58) 
-- CODE:
from numpy import*
from numpy.linalg import*

ce = array(eval(input("Codigo das filiais: ")))
x = sum(ce)
print(x)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-09 10:19:08) 
-- CODE:
from numpy import*
from numpy.linalg import*

ce = array(eval(input("Codigo das filiais: ")))
x = sum(ce)
print(x)
-- EXECUTION TIME:
0.961146
-- TEST CASE 1:
---- input:
1,2,3
1695
3265
9865
---- correct output:
[[   1    2    3]
 [1695 3265 9865]]
O total de despesas da empresa e: 14825 reais
---- user output:
6
-- TEST CASE 2:
---- input:
101,102,103,104
5625
6478
3169
9651
---- correct output:
[[ 101  102  103  104]
 [5625 6478 3169 9651]]
O total de despesas da empresa e: 24923 reais
---- user output:
410
-- TEST CASE 3:
---- input:
11,12,13,14
5000
2500
4000
325
---- correct output:
[[  11   12   13   14]
 [5000 2500 4000  325]]
O total de despesas da empresa e: 11825 reais
---- user output:
50
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-09 10:27:35) 
-- CODE:
from numpy import*
from numpy.linalg import*

ce = array(eval(input("Codigo das filiais: ")))
td = array(eval(input("v:")))
print(ce)
z = sum(td)
print(z)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-09 10:28:55) 
-- CODE:
from numpy import*
from numpy.linalg import*

ce = array(eval(input("Codigo das filiais: ")))
td = array(eval(input("v:")))
print(ce)
print(td)
z = sum(td)
print("O total de despesas da empresa é:",z)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-09 10:29:48) 
-- CODE:
from numpy import*
from numpy.linalg import*

ce = array(eval(input("Codigo das filiais: ")))
td = array(eval(input("v:")))
print(ce)
print(td)
z = sum(td)
msg = "O total de despesas da empresa é:"
print(msg,z)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-09 10:30:15) 
-- CODE:
from numpy import*
from numpy.linalg import*

ce = array(eval(input("Codigo das filiais: ")))
td = array(eval(input("v:")))
print(ce)
print(td)
z = sum(td)

print(z)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-09 10:31:00) 
-- CODE:
from numpy import*
from numpy.linalg import*

ce = array(eval(input("Codigo das filiais: ")))
td = array(eval(input("v:")))
print(ce)
print(td)
z = sum(td)

print(z)

-- EXECUTION TIME:
1.00748
-- TEST CASE 1:
---- input:
1,2,3
1695
3265
9865
---- correct output:
[[   1    2    3]
 [1695 3265 9865]]
O total de despesas da empresa e: 14825 reais
---- user output:
[1 2 3]
1695
1695
-- TEST CASE 2:
---- input:
101,102,103,104
5625
6478
3169
9651
---- correct output:
[[ 101  102  103  104]
 [5625 6478 3169 9651]]
O total de despesas da empresa e: 24923 reais
---- user output:
[101 102 103 104]
5625
5625
-- TEST CASE 3:
---- input:
11,12,13,14
5000
2500
4000
325
---- correct output:
[[  11   12   13   14]
 [5000 2500 4000  325]]
O total de despesas da empresa e: 11825 reais
---- user output:
[11 12 13 14]
5000
5000
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-09 10:31:26) 
-- CODE:
from numpy import*
from numpy.linalg import*

ce = array(eval(input("Codigo das filiais: ")))
td = array(eval(input("v:")))
print(ce)
print(td)
z = sum(td)

print("kdd" z)

-- ERROR:
File "XXXX", line 10
    print("kdd" z)
                ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-09 10:31:34) 
-- CODE:
from numpy import*
from numpy.linalg import*

ce = array(eval(input("Codigo das filiais: ")))
td = array(eval(input("v:")))
print(ce)
print(td)
z = sum(td)

print("kdd", z)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-09 10:31:54) 
-- CODE:
from numpy import*
from numpy.linalg import*

ce = array(eval(input("Codigo das filiais: ")))
td = array(eval(input("v:")))
print(ce)
print(td)
z = sum(td)

print("O total de despesas da empresa e:", z)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-09 10:32:26) 
-- CODE:
from numpy import*
from numpy.linalg import*

ce = array(eval(input("Codigo das filiais: ")))
td = array(eval(input("v:")))
print(ce)
print(td)
z = sum(td)

print("O total de despesas da empresa e:", z)

-- EXECUTION TIME:
0.985369
-- TEST CASE 1:
---- input:
1,2,3
1695
3265
9865
---- correct output:
[[   1    2    3]
 [1695 3265 9865]]
O total de despesas da empresa e: 14825 reais
---- user output:
[1 2 3]
1695
O total de despesas da empresa e: 1695
-- TEST CASE 2:
---- input:
101,102,103,104
5625
6478
3169
9651
---- correct output:
[[ 101  102  103  104]
 [5625 6478 3169 9651]]
O total de despesas da empresa e: 24923 reais
---- user output:
[101 102 103 104]
5625
O total de despesas da empresa e: 5625
-- TEST CASE 3:
---- input:
11,12,13,14
5000
2500
4000
325
---- correct output:
[[  11   12   13   14]
 [5000 2500 4000  325]]
O total de despesas da empresa e: 11825 reais
---- user output:
[11 12 13 14]
5000
O total de despesas da empresa e: 5000
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-09 10:33:47) 
-- CODE:
from numpy import*
from numpy.linalg import*

ce = array(eval(input("Codigo das filiais: ")))
td = array(eval(input("v:")))
print(ce)
print(td)
z = sum(td)

print("O total de despesas da empresa e:", z, "reais")

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-09 10:34:04) 
-- CODE:
from numpy import*
from numpy.linalg import*

ce = array(eval(input("Codigo das filiais: ")))
td = array(eval(input("v:")))
print(ce)
print(td)
z = sum(td)

print("O total de despesas da empresa e:", z, "reais")

-- EXECUTION TIME:
1.07496
-- TEST CASE 1:
---- input:
1,2,3
1695
3265
9865
---- correct output:
[[   1    2    3]
 [1695 3265 9865]]
O total de despesas da empresa e: 14825 reais
---- user output:
[1 2 3]
1695
O total de despesas da empresa e: 1695 reais
-- TEST CASE 2:
---- input:
101,102,103,104
5625
6478
3169
9651
---- correct output:
[[ 101  102  103  104]
 [5625 6478 3169 9651]]
O total de despesas da empresa e: 24923 reais
---- user output:
[101 102 103 104]
5625
O total de despesas da empresa e: 5625 reais
-- TEST CASE 3:
---- input:
11,12,13,14
5000
2500
4000
325
---- correct output:
[[  11   12   13   14]
 [5000 2500 4000  325]]
O total de despesas da empresa e: 11825 reais
---- user output:
[11 12 13 14]
5000
O total de despesas da empresa e: 5000 reais
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
